# cppagent

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD.TXT  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile.alpine  LICENSE.TXT  README.md  _clang-format  appveyor.yml  build_win32.bat  build_win64.bat  build_winxp.bat  conanfile.py  conanfile.txt  doxygen.cfg  error.hpp  get_package.rb  get_package_zip.py  make-agent-deb.sh  terms.tex
agent/: CMakeLists.txt  adapter.cpp  adapter.hpp  agent.cfg  agent.cpp  agent.hpp  asset.cpp  asset.hpp  change_observer.cpp  change_observer.hpp  checkpoint.cpp  checkpoint.hpp  component.cpp  component.hpp  component_event.cpp  component_event.hpp  composition.hpp  config.cpp  config.hpp  connector.cpp  connector.hpp  cppagent.cpp  cutting_tool.cpp  cutting_tool.hpp  data_item.cpp  data_item.hpp  device.cpp  device.hpp  globals.cpp  globals.hpp  json_printer.cpp  json_printer.hpp  logger.cpp  logger.hpp  options.cpp  options.hpp  ref_counted.cpp  ref_counted.hpp  rolling_file_logger.cpp  rolling_file_logger.hpp  (+9 more)
agent/CMake/: FindCppUnit.cmake  FindLibXML++.cmake
agent_lib/: CMakeLists.txt
cppunit2/: CodingGuideLines.txt  INSTALL-VS.Net2008.txt  INSTALL-WIN32.txt  INSTALL-unix  Makefile.am  THANKS  autogen.sh  configure.ac  cppunit.pc.in  cppunit.spec.in
cppunit2/contrib/: readme.txt
cppunit2/contrib/xml-xsl/: cppunit2junit.txt  cppunit2junit.xsl
cppunit2/doc/: CppUnit-win.dox  Doxyfile.in  FAQ  Makefile.am  cookbook.dox  footer.html  header.html  makedox.bat
cppunit2/examples/: Makefile.am  ReadMe.txt  examples.dsw  examples2008.sln
cppunit2/examples/ClockerPlugIn/: ClockerModel.h  ClockerPlugIn.cpp  ClockerPlugIn.vcproj
cppunit2/examples/DumperPlugIn/: DumperListener.h  DumperPlugIn.cpp  DumperPlugIn.vcproj
cppunit2/examples/cppunittest/: CppUnitTestMain.vcproj  CppUnitTestPlugIn.vcproj  ExceptionTest.cpp  HelperMacrosTest.cpp  HelperMacrosTest.h  Makefile.am  MockTestCase.cpp  OrthodoxTest.h  TestAssertTest.cpp  TestAssertTest.h  XmlOutputterTest.cpp  XmlOutputterTest.h  assertion_traitsTest.cpp
cppunit2/examples/hierarchy/: Makefile.am  hierarchy.vcproj  main.cpp
cppunit2/examples/money/: Makefile.am  MoneyApp.cpp  MoneyTest.cpp  MoneyTest.h  money.vcproj
cppunit2/examples/simple/: Main.cpp  Makefile.am  simple.vcproj  simple_plugin.opt  simple_plugin.vcproj
cppunit2/include/: Makefile.am
cppunit2/include/cppunit/: Makefile.am
cppunit2/m4/: .gitignore  README  ac_cxx_string_compare_string_first.m4  ax_cxx_compile_stdcxx_11.m4  ax_cxx_gcc_abi_demangle.m4  ax_cxx_have_sstream.m4  ax_cxx_namespaces.m4  bb_enable_doxygen.m4
cppunit2/src/: CppUnitLibraries2010.sln  Makefile.am
cppunit2/src/DllPlugInTester/: .gitignore  CommandLineParser.h  CommandLineParserTest.cpp  DllPlugInTester.cpp  DllPlugInTester.vcxproj  DllPlugInTesterTest.cpp  Makefile.am
cppunit2/src/cppunit/: Makefile.am
cppunit_make/: CMakeLists.txt
libxml2_make/: CMakeLists.txt
libxml2_make/include/libxml2/: xmlversion.h
libxml2_make/linux/: CMakeLists.txt
libxml2_make/linux/include/: config.h
libxml2_make/windows/: CMakeLists.txt
libxml2_make/windows/include/: config.h
test/: CMakeLists.txt  MTConnectDevices_1.1.xsd  adapter_test.cpp  adapter_test.hpp  agent_adapter_test.cpp  agent_device_test.cpp  agent_test.cpp  agent_test.hpp  agent_test_helper.cpp  agent_test_helper.hpp  asset1.xml  asset5.xml  asset_buffer_test.cpp  asset_hash_test.cpp  asset_test.cpp  asset_test.hpp  change_observer_test.cpp  change_observer_test.hpp  checkpoint_test.cpp  checkpoint_test.hpp  circular_buffer_test.cpp  component_event_test.cpp  component_event_test.hpp  component_parameters_test.cpp  component_test.cpp  component_test.hpp  composition_test.cpp  config_parser_test.cpp  config_test.cpp  config_test.hpp  connector_test.cpp  connector_test.hpp  coordinate_system_test.cpp  cutting_tool_test.cpp  cutting_tool_test.hpp  data_item_mapping_test.cpp  data_item_test.cpp  data_item_test.hpp  data_set_test.cpp  data_set_test.hpp  (+69 more)
test/data/relative_path_to_config/: agent.cfg
test/reports/: adapter_test_Report.diagsession  assert_buffer_test_Report.diagsession  assert_test_Report.diagsession  change_observer_test_Report.diagsession  checkpoint_test_Report.diagsession  circular_buffer_test_Report.diagsession  component_parameters_test_Report.diagsession  component_test_Report.diagsession  config_parser_test_Report.diagsession  connector_test_Report.diagsession  data_item_mapping_test_Report.diagsession  data_item_test_Report.diagsession  device_test_Report.diagsession  duplicate_filter_test_Report.diagsession  entity_parser_test_Report.diagsession  entity_printer_test_Report.diagsession  entity_test_Report.diagsession  file_assert_test_Report.diagsession  file_cache_test_Report.diagsession  globals_test_Report.diagsession  http_server_test_Report.diagsession  json_parser_test_Report.diagsession  json_printer_error_test_Report.diagsession  json_printer_test_Report.diagsession  mqtt_adapter_test_Report.diagsession  mqtt_isolated_test_Report.diagsession  mtconnect_xml_transform_test_Report.diagsession  observation_test_Report.diagsession  period_filter_test_Report.diagsession  pipeline_edit_test_Report.diagsession  qname_test_Report.diagsession  response_document_test_Report.diagsession  routing_test_Report.diagsession  sensor_configuration_test_Report.diagsession  shdr_tokenizer_test_Report.diagsession  timestamp_extractor_test_Report.diagsession  topic_mapping_test_Report.diagsession  unit_conversion_test_Report.diagsession  url_parser_test_Report.diagsession
test/resources/: asset1.xml  asset2.xml  asset4.xml  asset5.xml  client.crt  client.csr  client.key  clientca.crt  clientca.key  clientca.srl  cutting_tool_archetype.xml  dh2048.pem  rootca.crt  rootca.key  rootca.srl  user.crt  user.csr  user.key  zipped_file.txt
test/resources/ruby/: create_transform.rb  entity_should_support_data_sets.rb  should_convert_values.rb  should_rename_data_item_topic.rb  should_transform_with_subclass.rb  simple_module.rb
(+2268 files in other folders)
